spring 메서드 공통화 작업 중